--- a/backend/.env-example
+++ b/backend/.env-example
@@ -2,3 +2,7 @@ export PORT=5000
 export DATABASE_PATH = '/path/absoluto/'
 export DATABASE_NAME = 'proyecto.db'
 #reemplazar el puerto
+
+#JWT configuration
+export JWT_SECRET_KEY = 'clave-secreta-de-la-app'
+export JWT_ACCESS_TOKEN_EXPIRES = 3600
